# My_Works

./: A2p Sms Spam Filter Assignment.docx  CD final.docx  LICENSE  README.md
Coursera/Database/: MYSQL_queries_1.txt  MYSQL_queries_2.txt
Coursera/Programming/: allocation_of_memory_in_structure.cpp  dateprogram.cpp  linked_list_2.cpp  linked_list_3.cpp  pointers_to_pointers.cpp  reversing_the_sentences.cpp  top_scorer.cpp
Database/: datas.csv
Programming/: example.cpp  programs.cpp  tempCodeRunnerFile.c
Programming/12202130501027/: Array2.java  ArrayDemo.java  Calculator.java  Cipher.java  CricketDemo.java  EchoClient.java  EchoServer.java  EmployeeDemo.java  Fibonacci.java  Main.java  MyClient.java  MyServer.java  Prac10_1.java  Prac10_2.java  Prac10_3.java  Prac11_1.java  Prac11_1_Client.java  Prac11_1_Server.java  Prac11_2.java  Prac11_2_Cleint.java  Prac11_2_Server.java  Prac12_1.java  Prac12_2.java  Prac2_4.java  Prac4_3.java  Prac4_4.java  Prac5_1.java  Prac5_2.java  Prac6_1.java  Prac6_2.java  Prac6_3.java  Prac7_1.java  Prac7_2.java  Prac8_1.java  Prac8_2.java  Prac9_1.java  Prac9_2.java  WrapperClass.java  cipherdemo.java  threadingdemo.java  (+2 more)
Programming/ADV_JAVA/: jdbc_program.java
Programming/Advanced Java/: Index_LAB Manual_index_102045605_Advanced Java Programming.docx  LAB Manual_102045605_Advanced Java Programming.docx  Practical_1_1.java
Programming/C/: CMakeLists.txt  Practical 1(1.1).c  Practical 1(1.2).c  Practical 1(1.3).c  Practical 2(2.1).c  Practical 3(3.2).c  Practical 3(3.3).c  Practical 5(5.1).c  Practical 5(5.2).c  Practical 6(6.1).c  Practical 6(6.2).c  Practical 7(7.3)(c).c  Practical 7(7.4)(a).c  Practical 7(7.4)(c).c  Practical 7(7.4).c  Practical 8(8.2).c  Practical 8(8.3).c  Test.c  bubblesort.c  diwan.c  diwan2.c  diwan3.c  examques1.c  examques2.c  examques2geeks.c  fATEMA.c  findamgstrongnumber.c  func8.3.c  harshilinsert.c  hi.c  implicit.cpp  main.c  pascal.c  plain.c  practice.cpp  random.c  realamgstrongfor3.cpp  reelamgstrong.c  reelamgstrongfor3.c  reverse od=f an array.c  (+5 more)
Programming/C++/: circluar_queue.cpp  hi.cpp  linked_list.cpp  palindrome.cpp  practice1.cpp  practice2.cpp  practice3.cpp  project.cpp  project2.cpp  queue.cpp  searching.cpp  stack.cpp  stack_list.cpp
Programming/C/NETWORKING/: 2.2.cpp
Programming/CGD/: 2d_transformation.c  boundary_fill.c  bresenham_line.c  cohen_sutherland.c  dda_line.c  different_lines.c  ellipse.c  flood_fill.c  midpoint.c  moving_car.c  reflection.c  rising_sun.c  rotation.c  scaling.c  screen_saver.c  (+4 more)
Urban Palm Tree/: stock_market_analysis_forecasting.ipynb
(+313 files in other folders)
