cmake_minimum_required(VERSION 3.28)
project(C)

set(CMAKE_CXX_STANDARD 14)

add_executable(C
        NETWORKING/2.2.cpp
        NETWORKING/2.2.exe
        NETWORKING/2.2.o
        output/bubblesort.exe
        output/diwan3.exe
        output/examques2geeks.exe
        output/hi.exe
        "output/Practical 1(1.1).exe"
        output/Test.exe
        output/Untitled-1.exe
        bubblesort.c
        bubblesort.exe
        diwan.c
        diwan.exe
        diwan2.c
        diwan2.exe
        diwan3.c
        diwan3.exe
        examques1.c
        examques1.exe
        examques2.c
        examques2.exe
        examques2geeks.c
        examques2geeks.exe
        fATEMA.c
        findamgstrongnumber.c
        findamgstrongnumber.exe
        func8.3.c
        harshilinsert.c
        hi.c
        implicit.cpp
        implicit.exe
        main.c
        main.exe
        pascal.c
        pascal.exe
        plain.c
        "Practical 1(1.1).c"
        "Practical 1(1.1).exe"
        "Practical 1(1.2).c"
        "Practical 1(1.2).exe"
        "Practical 1(1.3).c"
        "Practical 1(1.3).exe"
        "Practical 2(2.1).c"
        "Practical 2(2.1).exe"
        "Practical 3(3.1).c"
        "Practical 3(3.1).exe"
        "Practical 3(3.2).c"
        "Practical 3(3.2).exe"
        "Practical 3(3.3).c"
        "Practical 3(3.3).exe"
        "Practical 5(5.1).c"
        "Practical 5(5.1).exe"
        "Practical 5(5.2).c"
        "Practical 5(5.2).exe"
        "Practical 6(6.1).c"
        "Practical 6(6.1).exe"
        "Practical 6(6.2).c"
        "Practical 6(6.2).exe"
        "Practical 7(7.3)(c).c"
        "Practical 7(7.3)(c).exe"
        "Practical 7(7.4)(a).c"
        "Practical 7(7.4)(a).exe"
        "Practical 7(7.4)(b).exe"
        "Practical 7(7.4)(c).c"
        "Practical 7(7.4)(c).exe"
        "Practical 7(7.4).c"
        "Practical 8(8.2).c"
        "Practical 8(8.2).exe"
        "Practical 8(8.3).c"
        "Practical 8(8.3).exe"
        practice.cpp
        random.c
        random.exe
        realamgstrongfor3.cpp
        reelamgstrong.c
        reelamgstrongfor3.c
        reelamgstrongfor3.exe
        "reverse od=f an array.c"
        "reverse od=f an array.exe"
        "star spacing.c"
        "star spacing.exe"
        sumitbubblesort.c
        Test.c
        times.cpp
        tpprogram.c
        tpprogram.exe
        typec.cpp
        typec.exe
        Untitled-1.c
        Untitled-1.txt
        vshello.c
        vshellor.c)
